<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="geofences_added">Geofence added successfully.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>

    <!-- Custom strings -->
    <string name="privacyPolicy"><u>privacy policy and legal agreement</u></string>
    <string name="authentication_subtitle_view">Please, choose signing method</string>
    <string name="str_email_login">Signin with email</string>
    <string name="str_gmail_login">Signin with Google</string>
    <string name="save_string">Save</string>
    <string name="select_poi_succeed">Point of interest: %s selected</string>
    <string name="radius_settings">radius_settings</string>
    <string name="signout_settings">signout_settings</string>
    <string name="radius_settings_format">Radius for newly created geofences</string>
    <string name="radius_settings_title">Geofencing radius</string>
    <string name="signout_settings_title">Signout Settings</string>
    <string name="agree">Agree</string>
    <string name="privacypolicy_str">Privacy Policy</string>
    <string name="err_enter_description">Please, enter description</string>

    <string name="deleteAll_settings_option">Delete Everything</string>
    <string name="keepReminders_settings_option">Delete Geofences,but keep reminders data</string>
    <string name="keepAll_settings_option">Keep Everything</string>

    <string name="authIntent_package_Key">AuthIntent_package_Key</string>
    <string name="reminder_deleted">Reminder Deleted !</string>

    <string name="delete_reminder">Delete</string>
    <string name="confirm_delete">Confirm</string>
    <string name="confirm">Are you sure you want to delete the reminder ?</string>
    <string name="edit_reminder">Edit</string>
    <string name="current_reminder_key">CurrentReminder_Key</string>
    <string name="reminder_navCommand">RemindersActivity_NavCommands</string>
    <string name="retry_string">Retry</string>
    <string name="sign_in_failue">There was a problem during sign in, please check your connection and try again later.</string>

</resources>
